--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -15,6 +15,7 @@ ciborium = "0.2"
 flume = "0.11"
 polars-core = { git = "https://github.com/pola-rs/polars.git", rev = "962b576b1cc678840d52fdcd67a1c117db49d0bb", default-features = false }
 polars-error = { git = "https://github.com/pola-rs/polars.git", rev = "962b576b1cc678840d52fdcd67a1c117db49d0bb", default-features = false }
+polars-utils = { git = "https://github.com/pola-rs/polars.git", rev = "962b576b1cc678840d52fdcd67a1c117db49d0bb", default-features = false }
 savvy = "0.6.7"
 serde_json = "1"
 state = "0.6"
