--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -31,8 +31,15 @@ features = [
     "diff",
     "dtype-full",
     "fused",
+    "is_in",
     "json",
     "lazy",
+    "list_any_all",
+    "list_eval",
+    "list_gather",
+    "list_sample",
+    "list_sets",
+    "list_to_struct",
     "meta",
     "parquet",
     "propagate_nans",
