--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -30,9 +30,16 @@ features = [
     "cse",
     "diff",
     "dtype-full",
-    "fused",
+    "fused",  
+    "is_in",
     "json",
     "lazy",
+    "list_any_all",
+    "list_eval",
+    "list_gather",
+    "list_sample",
+    "list_sets",
+    "list_to_struct",
     "meta",
     "parquet",
     "propagate_nans",
