--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -26,11 +26,15 @@ thiserror = "1"
 git = "https://github.com/pola-rs/polars.git"
 rev = "be5a4b453ca74bb5e0c782c292e9fca6aa60b203"
 features = [
+    "array_any_all",
+    "array_count",
+    "array_to_struct",
     "binary_encoding",
     "cse",
     "diff",
     "dtype-full",
     "fused",
+    "is_in",
     "json",
     "lazy",
     "meta",
