--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ S3method(as_polars_series,integer64)
 S3method(as_polars_series,list)
 S3method(as_polars_series,logical)
 S3method(as_polars_series,polars_data_frame)
+S3method(as_polars_series,polars_expr)
 S3method(as_polars_series,polars_series)
 S3method(as_polars_series,raw)
 S3method(as_polars_series,vctrs_rcrd)
@@ -117,6 +118,9 @@ S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(length,polars_data_frame)
 S3method(length,polars_series)
+S3method(parse_as_polars_duration_string,character)
+S3method(parse_as_polars_duration_string,default)
+S3method(parse_as_polars_duration_string,difftime)
 S3method(print,PlRChainedThen__bundle)
 S3method(print,PlRChainedWhen__bundle)
 S3method(print,PlRDataFrame__bundle)
