--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ S3method("-",polars_expr)
 S3method("-",polars_series)
 S3method("/",polars_expr)
 S3method("/",polars_series)
-S3method("<",polras_expr)
+S3method("<",polars_expr)
 S3method("<=",polars_expr)
 S3method("==",polars_expr)
 S3method(">",polars_expr)
