--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -58,7 +58,9 @@ features = [
     "list_sample",
     "list_sets",
     "list_to_struct",
+    "log",
     "meta",
+    "mode",
     "month_start",
     "month_end",
     "offset_by",
@@ -66,6 +68,7 @@ features = [
     "product",
     "propagate_nans",
     "range",
+    "row_hash",
     "serde",
     "serde-lazy",
     "sign",
