--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -61,10 +61,13 @@ features = [
     "log",
     "meta",
     "mode",
+    "moment",
     "month_start",
     "month_end",
     "offset_by",
     "parquet",
+    "pct_change",
+    "peaks",
     "product",
     "propagate_nans",
     "range",
