--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -43,6 +43,7 @@ features = [
     "extract_jsonpath",
     "find_many",
     "fused",
+    "hist",
     "is_between",
     "is_first_distinct",
     "is_in",
@@ -70,8 +71,11 @@ features = [
     "peaks",
     "product",
     "propagate_nans",
+    "random",
     "range",
+    "rank",
     "row_hash",
+    "search_sorted",
     "serde",
     "serde-lazy",
     "sign",
