init rust for rolling exprs

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -74,6 +74,8 @@ features = [
     "random",
     "range",
     "rank",
+    "rolling_window",
+    "rolling_window_by",
     "row_hash",
     "search_sorted",
     "serde",
