--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -36,6 +36,7 @@ features = [
     "concat_str",
     "cse",
     "cum_agg",
+    "cutqcut",
     "diff",
     "dot_product",
     "dtype-full",
@@ -46,6 +47,8 @@ features = [
     "find_many",
     "fused",
     "hist",
+    "interpolate",
+    "interpolate_by",
     "is_between",
     "is_first_distinct",
     "is_in",
@@ -76,6 +79,8 @@ features = [
     "random",
     "range",
     "rank",
+    "reinterpret",
+    "repeat_by",
     "rolling_window",
     "rolling_window_by",
     "round_series",
