$over() now requires dynamic dots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,27 +3,8 @@
 S3method("!",polars_expr)
 S3method("!=",polars_expr)
 S3method("$",polars_object)
-S3method("$<-",PlRChainedThen)
-S3method("$<-",PlRChainedThen__bundle)
-S3method("$<-",PlRChainedWhen)
-S3method("$<-",PlRChainedWhen__bundle)
-S3method("$<-",PlRDataFrame)
-S3method("$<-",PlRDataFrame__bundle)
-S3method("$<-",PlRDataType)
-S3method("$<-",PlRDataType__bundle)
-S3method("$<-",PlRExpr)
-S3method("$<-",PlRExpr__bundle)
-S3method("$<-",PlRLazyFrame)
-S3method("$<-",PlRLazyFrame__bundle)
-S3method("$<-",PlRLazyGroupBy)
-S3method("$<-",PlRLazyGroupBy__bundle)
-S3method("$<-",PlRSeries)
-S3method("$<-",PlRSeries__bundle)
-S3method("$<-",PlRThen)
-S3method("$<-",PlRThen__bundle)
-S3method("$<-",PlRWhen)
-S3method("$<-",PlRWhen__bundle)
 S3method("$<-",polars_object)
+S3method("$<-",savvy_neopolars__sealed)
 S3method("%%",polars_expr)
 S3method("%%",polars_series)
 S3method("%/%",polars_expr)
@@ -44,27 +25,8 @@ S3method(">=",polars_expr)
 S3method("[",polars_object)
 S3method("[",polars_struct_namespace)
 S3method("[<-",polars_object)
-S3method("[[<-",PlRChainedThen)
-S3method("[[<-",PlRChainedThen__bundle)
-S3method("[[<-",PlRChainedWhen)
-S3method("[[<-",PlRChainedWhen__bundle)
-S3method("[[<-",PlRDataFrame)
-S3method("[[<-",PlRDataFrame__bundle)
-S3method("[[<-",PlRDataType)
-S3method("[[<-",PlRDataType__bundle)
-S3method("[[<-",PlRExpr)
-S3method("[[<-",PlRExpr__bundle)
-S3method("[[<-",PlRLazyFrame)
-S3method("[[<-",PlRLazyFrame__bundle)
-S3method("[[<-",PlRLazyGroupBy)
-S3method("[[<-",PlRLazyGroupBy__bundle)
-S3method("[[<-",PlRSeries)
-S3method("[[<-",PlRSeries__bundle)
-S3method("[[<-",PlRThen)
-S3method("[[<-",PlRThen__bundle)
-S3method("[[<-",PlRWhen)
-S3method("[[<-",PlRWhen__bundle)
 S3method("[[<-",polars_object)
+S3method("[[<-",savvy_neopolars__sealed)
 S3method("^",polars_expr)
 S3method("|",polars_expr)
 S3method(as.data.frame,polars_data_frame)
