--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -31,6 +31,7 @@ features = [
     "array_to_struct",
     "binary_encoding",
     "business",
+    "cloud",
     "concat_str",
     "cse",
     "diff",
