--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -29,16 +29,20 @@ features = [
     "array_any_all",
     "array_count",
     "array_to_struct",
+    "asof_join",
     "binary_encoding",
     "business",
     "concat_str",
     "cse",
     "diff",
+    "dot_diagram",
     "dtype-full",
+    "dynamic_group_by",
     "extract_groups",
     "extract_jsonpath",
     "find_many",
     "fused",
+    "ipc",
     "is_in",
     "json",
     "lazy",
@@ -50,6 +54,7 @@ features = [
     "list_sample",
     "list_sets",
     "list_to_struct",
+    "merge_sorted",
     "meta",
     "month_start",
     "month_end",
