--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -60,8 +60,10 @@ features = [
     "month_end",
     "offset_by",
     "parquet",
+    "pivot",
     "propagate_nans",
     "range",
+    "semi_anti_join",
     "serde",
     "serde-lazy",
     "streaming",
