--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -63,6 +63,7 @@ features = [
     "pivot",
     "propagate_nans",
     "range",
+    "round_series",
     "semi_anti_join",
     "serde",
     "serde-lazy",
