--- a/NAMESPACE
+++ b/NAMESPACE
@@ -144,6 +144,7 @@ export(is_polars_expr)
 export(is_polars_lf)
 export(is_polars_selector)
 export(is_polars_series)
+export(is_selector)
 export(pl)
 import(rlang)
 useDynLib(neopolars, .registration = TRUE)
