--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method("%%",polars_expr)
 S3method("%%",polars_series)
 S3method("%/%",polars_expr)
 S3method("&",polars_expr)
+S3method("&",polars_selector)
 S3method("*",polars_expr)
 S3method("*",polars_series)
 S3method("+",polars_expr)
@@ -37,6 +38,7 @@ S3method("[[<-",polars_object)
 S3method("[[<-",savvy_neopolars__sealed)
 S3method("^",polars_expr)
 S3method("|",polars_expr)
+S3method("|",polars_selector)
 S3method(as.data.frame,polars_data_frame)
 S3method(as.data.frame,polars_lazy_frame)
 S3method(as.list,polars_data_frame)
@@ -145,7 +147,6 @@ export(is_polars_expr)
 export(is_polars_lf)
 export(is_polars_selector)
 export(is_polars_series)
-export(is_selector)
 export(pl)
 import(rlang)
 useDynLib(neopolars, .registration = TRUE)
