--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(length,polars_data_frame)
 S3method(length,polars_series)
+S3method(names,polars_data_frame)
 S3method(parse_as_polars_duration_string,"NULL")
 S3method(parse_as_polars_duration_string,character)
 S3method(parse_as_polars_duration_string,clock_duration)
