--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ S3method(print,PlRWhen__bundle)
 S3method(print,polars_data_frame)
 S3method(print,polars_dtype)
 S3method(print,polars_expr)
+S3method(print,polars_info)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
 S3method(print,polars_series)
@@ -146,5 +147,6 @@ export(is_polars_lf)
 export(is_polars_selector)
 export(is_polars_series)
 export(pl)
+export(polars_info)
 import(rlang)
 useDynLib(neopolars, .registration = TRUE)
