--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -31,6 +31,7 @@ features = [
     "array_to_struct",
     "binary_encoding",
     "business",
+    "cloud",
     "concat_str",
     "cse",
     "diagonal_concat",
@@ -40,6 +41,7 @@ features = [
     "extract_jsonpath",
     "find_many",
     "fused",
+    "ipc",
     "is_in",
     "json",
     "lazy",
