--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -31,6 +31,7 @@ features = [
     "array_any_all",
     "array_count",
     "array_to_struct",
+    "asof_join",
     "binary_encoding",
     "business",
     "cloud",
@@ -41,6 +42,8 @@ features = [
     "cutqcut",
     "diagonal_concat",
     "diff",
+    "dynamic_group_by",
+    "dot_diagram",
     "dot_product",
     "dtype-full",
     "dynamic_group_by",
@@ -51,6 +54,7 @@ features = [
     "find_many",
     "fused",
     "hist",
+    "iejoin",
     "interpolate",
     "interpolate_by",
     "ipc",
@@ -71,6 +75,7 @@ features = [
     "list_sets",
     "list_to_struct",
     "log",
+    "merge_sorted",
     "meta",
     "mode",
     "moment",
@@ -80,6 +85,7 @@ features = [
     "parquet",
     "pct_change",
     "peaks",
+    "pivot",
     "product",
     "propagate_nans",
     "random",
@@ -94,6 +100,7 @@ features = [
     "round_series",
     "row_hash",
     "search_sorted",
+    "semi_anti_join",
     "serde",
     "serde-lazy",
     "sign",
