--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -28,6 +28,7 @@ rev = "841c387d99d7024037556c4ef79d96bf2caac397"
 features = [
     "abs",
     "approx_unique",
+    "arg_where",
     "array_any_all",
     "array_count",
     "array_to_struct",
