--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ S3method(print,PlRChainedWhen__bundle)
 S3method(print,PlRDataFrame__bundle)
 S3method(print,PlRDataType__bundle)
 S3method(print,PlRExpr__bundle)
+S3method(print,PlRField__bundle)
 S3method(print,PlRLazyFrame__bundle)
 S3method(print,PlRLazyGroupBy__bundle)
 S3method(print,PlRSeries__bundle)
@@ -120,6 +121,7 @@ S3method(wrap,PlRChainedWhen)
 S3method(wrap,PlRDataFrame)
 S3method(wrap,PlRDataType)
 S3method(wrap,PlRExpr)
+S3method(wrap,PlRField)
 S3method(wrap,PlRLazyFrame)
 S3method(wrap,PlRLazyGroupBy)
 S3method(wrap,PlRSeries)
