--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,10 +23,12 @@ Suggests:
     clock,
     data.table,
     DiagrammeR,
+    DiagrammeRsvg,
     hms,
     jsonlite,
     nanoarrow,
     patrick,
+    rsvg,
     testthat (>= 3.0.0),
     tibble,
     vctrs,
