--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -15,7 +15,7 @@ ciborium = "0.2"
 flume = "0.11"
 polars-core = { git = "https://github.com/pola-rs/polars.git", rev = "841c387d99d7024037556c4ef79d96bf2caac397", default-features = false }
 polars-error = { git = "https://github.com/pola-rs/polars.git", rev = "841c387d99d7024037556c4ef79d96bf2caac397", default-features = false }
-savvy = "0.7"
+savvy = { version = "0.8", features = ["use-custom-error"] }
 serde_json = "1"
 state = "0.6"
 strum = "0.26"
