ci: set wasm build test workflow

--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -1,6 +1,16 @@
 name: Build WASM
 on:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - src/**
+      - configure*
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
