--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,11 +92,11 @@ S3method(dim,polars_data_frame)
 S3method(dim,polars_lazy_frame)
 S3method(infer_polars_dtype,"NULL")
 S3method(infer_polars_dtype,AsIs)
+S3method(infer_polars_dtype,POSIXlt)
 S3method(infer_polars_dtype,data.frame)
 S3method(infer_polars_dtype,default)
 S3method(infer_polars_dtype,list)
 S3method(infer_polars_dtype,polars_data_frame)
-S3method(infer_polars_dtype,polars_dtype)
 S3method(infer_polars_dtype,polars_lazy_frame)
 S3method(infer_polars_dtype,polars_series)
 S3method(infer_polars_dtype,vctrs_list_of)
