--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(is_polars_expr)
 export(is_polars_lf)
 export(is_polars_selector)
 export(is_polars_series)
+export(parquet_statistics)
 export(pl)
 import(rlang)
 useDynLib(neopolars, .registration = TRUE)
