--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -34,6 +34,7 @@ features = [
     "array_to_struct",
     "asof_join",
     "binary_encoding",
+    "bitwise",
     "business",
     "cloud",
     "concat_str",
