--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 S3method("!",polars_expr)
 S3method("!=",polars_expr)
 S3method("!=",polars_series)
+S3method("$",polars_dtype)
+S3method("$",polars_dtype_enum)
+S3method("$",polars_expr)
 S3method("$",polars_object)
 S3method("$<-",polars_object)
 S3method("$<-",savvy_neopolars__sealed)
@@ -35,6 +38,9 @@ S3method("[[<-",polars_object)
 S3method("[[<-",savvy_neopolars__sealed)
 S3method("^",polars_expr)
 S3method("|",polars_expr)
+S3method(.DollarNames,polars_dtype)
+S3method(.DollarNames,polars_dtype_enum)
+S3method(.DollarNames,polars_expr)
 S3method(as.data.frame,polars_data_frame)
 S3method(as.data.frame,polars_lazy_frame)
 S3method(as.list,polars_data_frame)
