--- a/.github/workflows/format-r.yml
+++ b/.github/workflows/format-r.yml
@@ -3,8 +3,18 @@ name: format-R
 on:
   push:
     branches: [main, master]
+    paths:
+      - altdoc/**
+      - R/**
+      - tests/**
+      - vignettes/**
   pull_request:
     branches: [main, master]
+    paths:
+      - altdoc/**
+      - R/**
+      - tests/**
+      - vignettes/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
