--- a/.github/workflows/format-rust.yml
+++ b/.github/workflows/format-rust.yml
@@ -3,8 +3,12 @@ name: format-Rust
 on:
   push:
     branches: [main, master]
+    paths:
+      - src/**
   pull_request:
     branches: [main, master]
+    paths:
+      - src/**
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref }}
