ci: Disable additional repository check linters in MegaLinter configuration

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -5,7 +5,9 @@ DISABLE:
 DISABLE_LINTERS:
   - C_CPPLINT
   - CSS_STYLELINT
+  - REPOSITORY_CHECKOV
   - REPOSITORY_KICS
+  - REPOSITORY_TRIVY
   - SPELL_CSPELL
 DISABLE_ERRORS_LINTERS:
   - COPYPASTE_JSCPD
