ci: grype seems slow

--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -6,6 +6,7 @@ DISABLE_LINTERS:
   - C_CPPLINT
   - CSS_STYLELINT
   - REPOSITORY_CHECKOV
+  - REPOSITORY_GRYPE
   - REPOSITORY_KICS
   - REPOSITORY_TRIVY
   - SPELL_CSPELL
