--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,12 @@
 root = true
 
+# *.R files are controlled by Air via `air.toml`
+
 [*]
 end_of_line = lf
 charset = utf-8
 insert_final_newline = true
 
-[*.R]
-indent_style = space
-indent_size = 2
-
-# Auto generated files
-[R/import-standalone-*.R]
-indent_size = unset
-
-# TODO: Fix at upstream
+# TODO: Remove after new savvy-cli release includes https://github.com/yutannihilation/savvy/pull/350
 [src/rust/api.h]
 insert_final_newline = false
