refactor: Use `utils::findMatches`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,5 +168,6 @@ export(is_polars_series)
 export(parquet_statistics)
 export(pl)
 import(rlang)
+importFrom(utils,findMatches)
 importFrom(utils,head)
 useDynLib(neopolars, .registration = TRUE)
