--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,12 @@ S3method("$",polars_data_frame)
 S3method("$",polars_dtype)
 S3method("$",polars_dtype_enum)
 S3method("$",polars_expr)
+S3method("$",polars_group_by)
+S3method("$",polars_lazy_frame)
+S3method("$",polars_lazy_group_by)
 S3method("$",polars_object)
+S3method("$",polars_rolling_group_by)
+S3method("$",polars_series)
 S3method("$<-",polars_object)
 S3method("$<-",savvy_neopolars__sealed)
 S3method("%%",polars_expr)
@@ -131,9 +136,15 @@ S3method(print,polars_expr)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
 S3method(print,polars_series)
+S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
 S3method(utils::.DollarNames,polars_dtype_enum)
 S3method(utils::.DollarNames,polars_expr)
+S3method(utils::.DollarNames,polars_group_by)
+S3method(utils::.DollarNames,polars_lazy_frame)
+S3method(utils::.DollarNames,polars_lazy_group_by)
+S3method(utils::.DollarNames,polars_rolling_group_by)
+S3method(utils::.DollarNames,polars_series)
 S3method(wrap,PlRChainedThen)
 S3method(wrap,PlRChainedWhen)
 S3method(wrap,PlRDataFrame)
