fix: Fix to pass unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,9 +39,6 @@ S3method("[[<-",polars_object)
 S3method("[[<-",savvy_neopolars__sealed)
 S3method("^",polars_expr)
 S3method("|",polars_expr)
-S3method(.DollarNames,polars_dtype)
-S3method(.DollarNames,polars_dtype_enum)
-S3method(.DollarNames,polars_expr)
 S3method(as.data.frame,polars_data_frame)
 S3method(as.data.frame,polars_lazy_frame)
 S3method(as.list,polars_data_frame)
@@ -134,6 +131,9 @@ S3method(print,polars_expr)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
 S3method(print,polars_series)
+S3method(utils::.DollarNames,polars_dtype)
+S3method(utils::.DollarNames,polars_dtype_enum)
+S3method(utils::.DollarNames,polars_expr)
 S3method(wrap,PlRChainedThen)
 S3method(wrap,PlRChainedWhen)
 S3method(wrap,PlRDataFrame)
