--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method("$",polars_dtype)
 S3method("$",polars_dtype_enum)
 S3method("$",polars_expr)
 S3method("$",polars_group_by)
+S3method("$",polars_group_by_dynamic)
 S3method("$",polars_lazy_frame)
 S3method("$",polars_lazy_group_by)
 S3method("$",polars_object)
@@ -141,6 +142,7 @@ S3method(utils::.DollarNames,polars_dtype)
 S3method(utils::.DollarNames,polars_dtype_enum)
 S3method(utils::.DollarNames,polars_expr)
 S3method(utils::.DollarNames,polars_group_by)
+S3method(utils::.DollarNames,polars_group_by_dynamic)
 S3method(utils::.DollarNames,polars_lazy_frame)
 S3method(utils::.DollarNames,polars_lazy_group_by)
 S3method(utils::.DollarNames,polars_rolling_group_by)
