--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ S3method(as_polars_series,integer)
 S3method(as_polars_series,integer64)
 S3method(as_polars_series,list)
 S3method(as_polars_series,logical)
+S3method(as_polars_series,nanoarrow_array)
 S3method(as_polars_series,nanoarrow_array_stream)
 S3method(as_polars_series,numeric_version)
 S3method(as_polars_series,polars_data_frame)
@@ -108,6 +109,7 @@ S3method(infer_polars_dtype,AsIs)
 S3method(infer_polars_dtype,data.frame)
 S3method(infer_polars_dtype,default)
 S3method(infer_polars_dtype,list)
+S3method(infer_polars_dtype,nanoarrow_array)
 S3method(infer_polars_dtype,nanoarrow_array_stream)
 S3method(infer_polars_dtype,polars_data_frame)
 S3method(infer_polars_dtype,polars_expr)
