feat: `infer_polars_dtype(<nanoarrow_array_stream>)`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ S3method(infer_polars_dtype,AsIs)
 S3method(infer_polars_dtype,data.frame)
 S3method(infer_polars_dtype,default)
 S3method(infer_polars_dtype,list)
+S3method(infer_polars_dtype,nanoarrow_array_stream)
 S3method(infer_polars_dtype,polars_data_frame)
 S3method(infer_polars_dtype,polars_expr)
 S3method(infer_polars_dtype,polars_lazy_frame)
