feat: Support importing some arrow objects (RecordBatchReader, Tabular) via Arrow C Stream interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,11 +70,13 @@ S3method(as_polars_expr,raw)
 S3method(as_polars_lf,default)
 S3method(as_polars_lf,polars_lazy_frame)
 S3method(as_polars_series,"NULL")
+S3method(as_polars_series,ArrowTabular)
 S3method(as_polars_series,AsIs)
 S3method(as_polars_series,Date)
 S3method(as_polars_series,ITime)
 S3method(as_polars_series,POSIXct)
 S3method(as_polars_series,POSIXlt)
+S3method(as_polars_series,RecordBatchReader)
 S3method(as_polars_series,array)
 S3method(as_polars_series,blob)
 S3method(as_polars_series,character)
@@ -105,7 +107,9 @@ S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(dim,polars_lazy_frame)
 S3method(infer_polars_dtype,"NULL")
+S3method(infer_polars_dtype,ArrowTabular)
 S3method(infer_polars_dtype,AsIs)
+S3method(infer_polars_dtype,RecordBatchReader)
 S3method(infer_polars_dtype,data.frame)
 S3method(infer_polars_dtype,default)
 S3method(infer_polars_dtype,list)
