--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ S3method(wrap,PlRDataType)
 S3method(wrap,PlRExpr)
 S3method(wrap,PlRLazyFrame)
 S3method(wrap,PlRLazyGroupBy)
+S3method(wrap,PlRSQLContext)
 S3method(wrap,PlRSeries)
 S3method(wrap,PlRThen)
 S3method(wrap,PlRWhen)
