--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -83,9 +83,9 @@ jobs:
         name: Set Rust target
         run: |
           if [ "${{ runner.os }}" == "Windows" ]; then
-            echo "TARGET=x86_64-pc-windows-gnu" >>$GITHUB_OUTPUT
+            echo "TARGET=x86_64-pc-windows-gnu" >>"$GITHUB_OUTPUT"
           else
-            echo "TARGET=$(rustc -vV | grep host | cut -d' ' -f2)" >>$GITHUB_OUTPUT
+            echo "TARGET=$(rustc -vV | grep host | cut -d' ' -f2)" >>"$GITHUB_OUTPUT"
           fi
 
       - uses: Swatinem/rust-cache@v2
@@ -100,10 +100,10 @@ jobs:
           NOT_CRAN: "true"
         run: |
           # make sure savvy is built from source because rust-cache doesn't work well.
-          (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' | xargs rm -rf) || true
+          (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
 
           Rscript -e 'pkgbuild::compile_dll()'
-          echo "LIBR_POLARS_PATH=$(pwd)/src/rust/target/${{ steps.rust-target.outputs.TARGET }}/release/libr_polars.a" >>$GITHUB_ENV
+          echo "LIBR_POLARS_PATH=$(pwd)/src/rust/target/${{ steps.rust-target.outputs.TARGET }}/release/libr_polars.a" >>"$GITHUB_ENV"
 
       - uses: r-lib/actions/check-r-package@v2
         env:
