--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -65,7 +65,7 @@ jobs:
     steps:
       - name: More space
         if: runner.os == 'Linux'
-        uses: jlumbroso/free-disk-space@1.3.1
+        uses: jlumbroso/free-disk-space@v1.3.1
 
       - uses: actions/checkout@v4
 
