ci: set NOT_CRAN=ture when installing R deps

--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -79,6 +79,8 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
           cache: "always"
+        env:
+          NOT_CRAN: "true"
 
       - id: rust-target
         name: Set Rust target
