ci: always cache rust builds for faster test

--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -95,6 +95,7 @@ jobs:
         with:
           workspaces: "src/rust -> target"
           shared-key: ${{ steps.rust-target.outputs.TARGET }}
+          cache-on-failure: "true"
 
       - name: Build lib
         env:
