--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ insert_final_newline = true
 indent_style = tab
 
 # Auto generated files
-[tests/testthat/_snaps/*]
+[tests/testthat/_snaps/**/*]
 indent_size = unset
 insert_final_newline = unset
