--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -1,4 +1,4 @@
-name: R-CMD-check
+name: Test R
 on:
   push:
     branches:
@@ -47,20 +47,14 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
-          - windows-latest
         r:
           - release
-        include:
-          - os: ubuntu-latest
-            r: devel
-          - os: ubuntu-latest
-            r: "4.3"
+          - devel
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      LIBR_POLARS_BUILD: "true"
+      NOT_CRAN: "true"
 
     steps:
       - uses: actions/checkout@v4
@@ -79,8 +73,6 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
           cache: "always"
-        env:
-          NOT_CRAN: "true"
 
       - id: rust-target
         name: Set Rust target
@@ -94,11 +86,11 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "src/rust -> target"
-          shared-key: ${{ steps.rust-target.outputs.TARGET }}
+          shared-key: ${{ steps.rust-target.outputs.TARGET }}-release
 
       - name: Build lib
         env:
-          NOT_CRAN: "true"
+          LIBR_POLARS_BUILD: "true"
         run: |
           # make sure savvy is built from source because rust-cache doesn't work well.
           (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
