--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Suggests:
     vctrs,
     withr
 Additional_repositories: https://community.r-multiverse.org
+Config/build/copy-method: copy
 Config/Needs/dev: devtools, lifecycle, readr, glue
 Config/testthat/edition: 3
 Config/testthat/parallel: true
