ci: Tweak job name

--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -39,9 +39,7 @@ defaults:
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.os }}
-
-    name: ${{ matrix.os }} (${{ matrix.r }})
-
+    name: R CMD check (R ${{ matrix.r }})
     strategy:
       fail-fast: false
       matrix:
@@ -50,7 +48,6 @@ jobs:
         r:
           - release
           - devel
-
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
