--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -173,9 +173,11 @@ jobs:
           R CMD INSTALL --no-multiarch --with-keep.source .
 
       - name: Run tests
+        shell: Rscript {0}
         run: |
-          Rscript -e 'devtools::test()'
+          devtools::test()
 
       - name: Run examples
+        shell: Rscript {0}
         run: |
-          Rscript -e 'devtools::check_examples()'
+          devtools::run_examples(document = FALSE)
