ci: disable windows for now

--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -118,7 +118,8 @@ jobs:
       matrix:
         os:
           - macos-latest
-          - windows-latest
+          # TODO: Windows seems buggy, so we disable it for now
+          # - windows-latest
         r:
           - release
         include:
