--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -118,8 +118,7 @@ jobs:
       matrix:
         os:
           - macos-latest
-          # TODO: Windows seems buggy, so we disable it for now
-          # - windows-latest
+          - windows-latest
         r:
           - release
         include:
@@ -166,6 +165,7 @@ jobs:
           # Since the debug build is faster to compile (200 sec v.s. 600 sec on macos-14 runner without cache),
           # we use the debug build here.
           Rscript -e 'pkgbuild::compile_dll(debug = TRUE)'
+          echo "LIBR_POLARS_PATH=$(pwd)/src/rust/target/${{ steps.rust-target.outputs.TARGET }}/release/libr_polars.a" >>"$GITHUB_ENV"
 
       - name: Run tests
         shell: Rscript {0}
