--- a/.github/workflows/test-rust.yml
+++ b/.github/workflows/test-rust.yml
@@ -4,11 +4,13 @@ on:
     branches:
       - main
     paths:
+      - .github/workflows/test-rust.yml
       - src/rust/**
   pull_request:
     branches:
       - main
     paths:
+      - .github/workflows/test-rust.yml
       - src/rust/**
   workflow_dispatch:
 
