--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -168,11 +168,9 @@ jobs:
           Rscript -e "pkgbuild::compile_dll(debug = ${{ runner.os == 'Windows' && 'FALSE' || 'TRUE' }})"
 
       - name: Run tests
-        shell: Rscript {0}
         run: |
-          devtools::test()
+          Rscript -e 'devtools::test()'
 
       - name: Run examples
-        shell: Rscript {0}
         run: |
-          devtools::run_examples(document = FALSE)
+          Rscript -e 'devtools::run_examples(document = FALSE)'
