Revert "ci: test step should fail if the tests aren't passed"
This reverts commit 34594b5eaa5133ad6ebc5fbbde302b61a1762aaf.

--- a/.github/workflows/test-r.yml
+++ b/.github/workflows/test-r.yml
@@ -168,9 +168,11 @@ jobs:
           Rscript -e "pkgbuild::compile_dll(debug = ${{ runner.os == 'Windows' && 'FALSE' || 'TRUE' }})"
 
       - name: Run tests
+        shell: Rscript {0}
         run: |
-          Rscript -e 'devtools::test()'
+          devtools::test()
 
       - name: Run examples
+        shell: Rscript {0}
         run: |
-          Rscript -e 'devtools::run_examples(document = FALSE)'
+          devtools::run_examples(document = FALSE)
